--- a/BoW/CMakeLists.txt
+++ b/BoW/CMakeLists.txt
@@ -10,6 +10,12 @@ set (CMAKE_CXX_FLAGS -fopenmp)
 #include(FindCUDA)
 
 
-add_executable( bow bagofwords.cpp)
-target_link_libraries( bow ${OpenCV_LIBS})
+add_executable( SVM bagofwordsSVM.cpp)
+target_link_libraries( SVM ${OpenCV_LIBS})
+
+add_executable( KNN bagofwordsKNN.cpp)
+target_link_libraries( KNN ${OpenCV_LIBS})
+
+add_executable( ANN bagofwordsANN.cpp)
+target_link_libraries( ANN ${OpenCV_LIBS})
 
